# staking-canister

./: .crates2.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  build.sh  dfx.json  liquidium_staking.did  skills-lock.json
.agents/skills/cycles-management/: SKILL.md
.agents/skills/icp-cli/: SKILL.md
.agents/skills/icp-cli/references/: binding-generation.md  dev-server.md  dfx-migration.md
doc/: Legend.md  PSBT_Stake.md  PSBT_Unstake.md  PSBT_Withdraw.md
setup/: init_pool.sh
src/: dev_hooks.rs  lib.rs  log.rs
src/bitcoin/: address.rs  mod.rs  psbt.rs
src/bitcoin/utils/: script.rs
src/config/: mod.rs
src/core/: mod.rs  staking.rs  storage.rs  transaction_parser.rs  unstake_helper.rs  unstaking.rs  withdraw_helper.rs  withdrawal.rs
src/declarations/liquidium_staking/: index.d.ts  index.js  liquidium_staking.did  liquidium_staking.did.d.ts  liquidium_staking.did.js
src/libs/: mod.rs
src/libs/ordinals_runes/: Cargo.toml
src/libs/ordinals_runes/src/: lib.rs
src/oracle/: bitcoin.rs  http.rs  mempool.rs  mod.rs  omnity.rs  ord_client.rs
src/state/: mod.rs  transactions_storage.rs  unstake_storage.rs
src/tests/: mod.rs  rune_parser_tests.rs  storage_tests.rs
src/tests/mocked/: edicts.json  psbt.txt
src/types/: account.rs  cbor_wrapper.rs  identifier32.rs  mod.rs
src/validation/: mod.rs  stake.rs  unstake.rs  utils.rs  withdraw.rs
