[package]
name = "liquidium_staking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[lints.clippy]
single-match = "allow"

[features]
dev-hooks = []
prod = []

[dependencies]
candid = "0.10.14"
ic-cdk = "0.18.5"
ic-cdk-macros = "0.18.5"
ic-cdk-timers = "0.12.2"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.140"
base64 = "0.22.1"
thiserror = "2.0.12"
num-traits = "0.2.19"
ic-stable-structures = "0.6.9"
ic-canister-log = "0.2.0"

miniscript = { version = "7.0", features = ["compiler"] }
bitcoin = { version = "0.30" }                                                  # <— bajar a 0.30
secp256k1 = { version = "0.27", default-features = false, features = ["rand"] }
getrandom = { version = "=0.2.15", features = ["custom"] }
futures = "0.3.31"
hex = "0.4.3"

# Local dependencies
ordinals_runes = { path = "src/libs/ordinals_runes" }
ciborium = "0.2.2"
async-trait = "0.1.88"
mockall = "0.13.1"

[dev-dependencies]
rand = "0.9.3"
tokio = { version = "1.46.1", features = ["full"] }
ordinals = "0.0.12"
